Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -18,8 +18,7 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-- task: CmdLine@2
-  inputs:
-    script: |
-      javac Helloworld.java
-      java Helloworld
+- script: |
+    javac Helloworld.java
+    java Helloworld
+  displayName: 'Compile and Run Java Program'
