Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ jobs:
     displayName: 'Run a one-line script'
 
   - script: |
-      javac Helloworld.java
-      java Helloworld
+      javac hello.java
+      java hello
     displayName: 'Compile and Run Java Program'
